# changelog-gen

./: .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  `  pyproject.toml  setup.cfg
.github/: pull_request_template.md
.github/workflows/: pythonapp.yml  style.yml  tests.yml
changelog_gen/: __init__.py  config.py  errors.py  extractor.py  post_processor.py  util.py  vcs.py  version.py  writer.py
changelog_gen.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
changelog_gen/cli/: command.py  util.py
release_notes/: 1.feat  11.feat  12.feat  13.feat  14.feat  15.feat  16.feat  19.feature  24.fix  28.feature  2914.feature  3.feat  30.fix  32.feature  37.feat  38.fix  4.fix  40.fix  42.feat  43.feat  44.feat  45.feat  48.fix  49.fix  49.fix!  5.fix  50.fix  52.fix  53.fix  55.feat  6.feat  7.fix  8.fix
tests/: conftest.py  test_config.py  test_extractor.py  test_post_processor.py  test_vcs.py  test_version.py  test_writer.py
tests/cli/: conftest.py  test_generate.py  test_help.py  test_init.py  test_migrate.py  test_util.py  test_version.py
