[tool.poetry]
name = "changelog_gen"
version = "0.8.0"
description = "Changelog generation tool"
authors = ["Daniel Edgecombe <edgy.edgemond@gmail.com>"]
license = "Apache-2.0"
repository="https://github.com/EdgyEdgemond/changelog-gen/"
homepage="https://github.com/EdgyEdgemond/changelog-gen/"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

click = "^8.0"
bump2version = "^0.5.11"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]

# Tests
freezegun = "^1.2.1"
pytest = "^6.2"
pytest-cov = "^2.8"
pytest-git = "^1.7.0"
pytest-random-order = "^1.0"
requests-mock = "^1.9.3"

# Style
ruff = "^0.0"
pre-commit = "^3.0.2"
black = "^22.12.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--random-order"


[tool.coverage.report]
sort = "cover"
fail_under = 95
show_missing = true
skip_covered = true
exclude_lines = [
    "if typing.TYPE_CHECKING:",
]

[tool.coverage.run]
branch = true
source = ["changelog_gen"]


[tool.bandit]
exclude_dirs = ["tasks.py"]
skips = [
    "B101",  # use of asserts
    "B404",  # subprocess import
    "B603",  # use of subprocess
    "B607",  # use of subprocess
]

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
select = ["ALL"]
ignore = [
    "ANN002",  # type annotation on *args
    "ANN003",  # type annotation on **kwargs
    "ANN101",  # annotate self
    "ANN102",  # annotate cls
    "D",
    "FBT",  # boolean trap? no documentation
    "S",  # bandit is run as a full commit hook
]

[tool.ruff.per-file-ignores]
"tasks.py" = ["ANN", "E501", "INP001"]
"tests/*" = ["ANN", "D", "S105", "S106", "SLF001"]

[tool.ruff.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.pydocstyle]
convention = "google"

[tool.poetry.scripts]
changelog-gen = "changelog_gen.cli.command:gen"
changelog-init = "changelog_gen.cli.command:init"

[build-system]
requires = ["poetry-core>=1.0"]
build-backend = "poetry.core.masonry.api"
